--- a/EJ16/index.html
+++ b/EJ16/index.html
@@ -35,9 +35,9 @@
         <td colspan="2" class="colOne">58 a 63 días</td>
         <td>9 meses</td>
       </tr>
-      <tr class="restCells">
+      <tr  class="restCells">
         <td>Duración de vida del pelo/cabello</td>
-        <td colspan="2">1 año</td>
+        <td colspan="2" class="colOne">1 año</td>
         <td>2 a 7 años</td>
       </tr>
     </table>
