--- a/EJ9/index.html
+++ b/EJ9/index.html
@@ -10,10 +10,13 @@
     <title>Marc Pellicer</title>
     
   </head>
+  <h1>El desempleo en España</h1>
+  <h5>La siguiente tabla muestra la evolución del desempleo en España, comparado con la media de los 27 países de la Unión Europa,</br> 
+    Grecia, que compite con España en ser el primero en esta vergonzosa competición y Estados Unidos y Japón, dos de las primeras </br> economías mundiales.</h5>
   <body>
     <table>
-      <tr>
-        <td>País</td>
+      <tr class="row1">
+        <td id="country">País</td>
         <td>2000</td>
         <td>2001</td>
         <td>2002</td>
@@ -46,7 +49,7 @@
         <td>10.4</td>
         <td>10.8</td>
       </tr>
-      <tr>
+      <tr class="row2">
         <td>España</td>
         <td>11.9</td>
         <td>10.6</td>
@@ -116,4 +119,5 @@
       </tr>
     </table>
   </body>
+  <footer> Fuente: <span>Índice de desempleo anual.</span> Eurostat</footer>
 </html>
