--- a/EJ20/index.html
+++ b/EJ20/index.html
@@ -3,25 +3,68 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Ejercicio14">
+    <meta name="description" content="Ejercicio20">
     <meta name="auth" content="Marc Pellicer">
     <link rel="stylesheet" href="./css/style.css">
     <title>Marc Pellicer</title>
   </head>
   <body>
-    <ol>Diarios de:</h3>
-    <ol>
-      <li>ESPAÑA...</li>
-        <ol type = a>
-          <li>El mundo</li>
-          <li>El País</li>
-          <li>La Vanguardia</li>
-        </ol>
-      <li>EE.UU.</li>
-        <ol type = I>
-          <li style="padding-left: 20px;">New York Times</li>
-          <li style="padding-left: 20px;">The Washington Post</li>
-        </ol>
-    </ol>
+    <table>
+      <tr>
+        <th>Categoria</th>
+        <th>Etiquetas</th>
+      </tr> 
+      <tr>
+        <td class="categoria" rowspan="5">Formulario</td>
+        <td>form</td>
+      </tr>
+      <tr>
+        <td>button</th>
+      </tr>
+      <tr>
+        <td>input</th>
+      </tr>
+      <tr>
+        <td>select</th>
+      </tr>
+      <tr>
+        <td>textarea</th>
+      </tr>
+      <tr>
+        <td class="categoria" rowspan="5">Tabla</th>
+        <td>table</td>   
+      </tr>
+      <tr>
+        <td>tr</th>
+      </tr>
+      <tr>
+        <td>th</th>
+      </tr>
+      <tr>
+        <td>td</th>
+      </tr>
+      <tr>
+        <td>caption</th>
+      </tr>
+      <tr>
+        <td class="categoria" rowspan="6">Texto</th>
+        <td>b</th>    
+      </tr>
+      <tr>
+        <td>em</th>
+      </tr>
+      <tr>
+        <td>i</th>
+      </tr>
+      <tr>
+        <td>strong</th>
+      </tr>
+      <tr>
+        <td>sub</th>
+      </tr>
+      <tr>
+        <td>sup</th>
+      </tr>   
+  </table>
   </body>
 </html>
