--- a/EJ17/index.html
+++ b/EJ17/index.html
@@ -11,18 +11,19 @@
     
   </head>
     <body>
-      <div class="contenedor" id="photo1">A</div>
-      <div class="contenedor2"><div class="contenedor" id="photo2">B</div></div>
-      <div class="contenedor" id="photo3"><img src="img/2.jpg" alt="Imagen 3"></div>
-      <div class="contenedor3"><div class="contenedor" id="photo4">D</div></div>
-      <div class="contenedor" id="photo5"><img src="img/5.jpg" alt="Imagen 5">E</div>
-      <div class="contenedor" id="photo6"><img src="img/5.jpg" alt="Imagen 6">F</div>
-      <div class="contenedor" id="photo7"><img src="img/4.jpg" alt="Imagen 7">G</div>
-      <div class="contenedor" id="photo8"><img src="img/3.jpg" alt="Imagen 8">H</div>
-      <div class="contenedor" id="photo9"><img src="imagen3.jpg" alt="Imagen 1">I</div>
-      <div class="contenedor" id="photo10"><img src="imagen3.jpg" alt="Imagen 2">J</div>
-      <div class="contenedor" id="photo11"><img src="imagen3.jpg" alt="Imagen 3">K</div>
-      <div class="contenedor" id="photo12"><img src="imagen3.jpg" alt="Imagen 4">L</div>
+      <div class="container">
+      <div id="a" class="divImage"><div>A</div></div>
+      <div id="b" class="divImage"><div>B</div></div>
+      <div id="c" class="divImage"><div>C</div></div>
+      <div id="d" class="divImage"><div>D</div></div>
+      <div id="e" class="divImage"><div>E</div></div>
+      <div id="f" class="divImage"><div>F</div></div>
+      <div id="g" class="divImage"><div>G</div></div>
+      <div id="h" class="divImage"><div>H</div></div>
+      <div id="i" class="divImage"><div>I</div></div>
+      <div id="j" class="divImage"><div>J</div></div>
+      <div id="k" class="divImage"><div>K</div></div>
+      <div id="l" class="divImage"><div>L</div></div>
       </div>
   </body>
 </html>
