--- a/EJ18/index.html
+++ b/EJ18/index.html
@@ -3,121 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Ejercicio19">
+    <meta name="description" content="Ejercicio18">
     <meta name="auth" content="Marc Pellicer">
     <link rel="stylesheet" href="./css/style.css">
 
     <title>Marc Pellicer</title>
     
   </head>
-  <h1>El desempleo en España</h1>
-  <h5>La siguiente tabla muestra la evolución del desempleo en España, comparado con la media de los 27 países de la Unión Europa,</br> 
-    Grecia, que compite con España en ser el primero en esta vergonzosa competición y Estados Unidos y Japón, dos de las primeras </br> economías mundiales.</h5>
-  <body>
-    <table>
-      <tr class="row1">
-        <td id="country">País</td>
-        <td>2000</td>
-        <td>2001</td>
-        <td>2002</td>
-        <td>2003</td>
-        <td>2004</td>
-        <td>2005</td>
-        <td>2006</td>
-        <td>2007</td>
-        <td>2008</td>
-        <td>2009</td>
-        <td>2010</td>
-        <td>2011</td>
-        <td>2012</td>
-        <td>2013</td>
-      </tr>
-      <tr>
-        <td>UE (27 países)</td>
-        <td>8.9</td>
-        <td>8.7</td>
-        <td>9</td>
-        <td>9.1</td>
-        <td>9.3</td>
-        <td>9</td>
-        <td>8.2</td>
-        <td>7.2</td>
-        <td>7</td>
-        <td>9</td>
-        <td>9.6</td>
-        <td>9.6</td>
-        <td>10.4</td>
-        <td>10.8</td>
-      </tr>
-      <tr class="row2">
-        <td>España</td>
-        <td>11.9</td>
-        <td>10.6</td>
-        <td>11.5</td>
-        <td>11.5</td>
-        <td>11</td>
-        <td>9.2</td>
-        <td>8.5</td>
-        <td>8.2</td>
-        <td>11.3</td>
-        <td>17.9</td>
-        <td>10.0</td>
-        <td>21.4</td>
-        <td>24.8</td>
-        <td>26.1</td>
-      </tr>
-      <tr>
-        <td>Grecia</td>
-        <td>11.2</td>
-        <td>10.7</td>
-        <td>10.3</td>
-        <td>9.7</td>
-        <td>10.6</td>
-        <td>10</td>
-        <td>9</td>
-        <td>8.4</td>
-        <td>7.8</td>
-        <td>9.6</td>
-        <td>12.7</td>
-        <td>17.9</td>
-        <td>24.5</td>
-        <td>26.1</td>
-      </tr>
-      <tr>
-        <td>Estdos Unidos</td>
-        <td>4</td>
-        <td>4.8</td>
-        <td>5.8</td>
-        <td>6</td>
-        <td>5.5</td>
-        <td>5.1</td>
-        <td>4.6</td>
-        <td>4.6</td>
-        <td>5.8</td>
-        <td>9.3</td>
-        <td>9.6</td>
-        <td>8.9</td>
-        <td>8.1</td>
-        <td>7.4</td>
-      </tr>
-      <tr>
-        <td>Japón</td>
-        <td>4</td>
-        <td>5</td>
-        <td>5.4</td>
-        <td>5.3</td>
-        <td>4.7</td>
-        <td>4.4</td>
-        <td>4.1</td>
-        <td>3.9</td>
-        <td>4</td>
-        <td>5.1</td>
-        <td>5.1</td>
-        <td>4.6</td>
-        <td>4.3</td>
-        <td>4</td>
-      </tr>
-    </table>
+    <body>
+      <div class="divs" id="divRest">
+          &ltdiv&gt anterior
+      </div >
+      <div class="divs" id="divTest">
+          Contenido del div de prueba 
+      </div>
+      <div class="divs" id="divRest">
+          &ltdiv&gt posterior
+      </div>
   </body>
-  <footer> Fuente: <span>Índice de desempleo anual.</span> Eurostat</footer>
 </html>
